# rust-tool

./: Cargo.toml  README.md  nitro_codes.txt
src/: main.rs
src/stuff/: discord.rs  functions.rs  mod.rs  sysinfo.rs
