[package]
name = "rust-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figlet-rs = "0.1.3"
sysinfo = "0.20.5"
rand = "0.8.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }